[gd_scene load_steps=5 format=3 uid="uid://dnhdid18bmg2f"]

[ext_resource type="Script" path="res://entities/dynamic/natural/script/solar_system.gd" id="1"]
[ext_resource type="Script" path="res://entities/dynamic/debug_link_astar.gd" id="4"]

[sub_resource type="CircleShape2D" id="1"]
radius = 31.0198

[sub_resource type="CircleShape2D" id="2"]
radius = 150.641

[node name="system" type="Node2D"]
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
offset_top = 65.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.1, 0.1)

[node name="Sprite_Select" type="Sprite2D" parent="."]
visible = false
z_index = 1
scale = Vector2(0.105, 0.105)

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color(0.8, 0, 0, 1)
shape = SubResource("1")

[node name="Buffer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buffer"]
modulate = Color(0, 0.768627, 0.211765, 1)
z_index = -1
shape = SubResource("2")

[node name="debug_link_astar" type="Line2D" parent="."]
visible = false
width = 1.0
default_color = Color(0, 1, 0.0156863, 1)
script = ExtResource("4")

[node name="travel_line_template" type="Line2D" parent="."]
width = 1.0
default_color = Color(1, 1, 1, 0.25)
joint_mode = 2
antialiased = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.8
offset_top = -54.3114
offset_right = 52.8
offset_bottom = -14.3114
